Brighten the bad red.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -15,7 +15,7 @@ html, body {
   --theme-bg-2: var(--alliance-bg-2);
   --theme-text: var(--dark-mode-text);
   --theme-good: #11c700;
-  --theme-bad: #920000;
+  --theme-bad: #bb0000;
 }
 
 @import './widgets.scss';
