--- a/styles/app.scss
+++ b/styles/app.scss
@@ -32,6 +32,15 @@ html, body {
     color: var(--theme-text);
   }
 
+  .tabs {
+    margin-bottom: 0.5rem;
+
+    ul {
+      margin-left: 0;
+      margin-top: 0;
+    }
+  }
+
   .card {
     border: 1px solid var(--theme-bg-2);
     border-radius: 0;
