--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,6 +1,7 @@
 @import '~bulma';
 @import '@davidcraig/wow/wow.css';
 @import 'navbar';
+@import 'table';
 
 :root {
     --dark-mode-text: #ececec;
