Refactor class pages.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2,6 +2,7 @@
 @import '@davidcraig/wow/wow.css';
 @import 'navbar';
 @import 'table';
+@import 'tabs';
 
 :root {
     --dark-mode-text: #ececec;
@@ -21,6 +22,36 @@ html, body {
   --theme-bad: #bb0000;
 }
 
+@mixin class-colours {
+  &.fg-mage { color: var(--wow-class-mage); }
+  &.fg-priest { color: var(--wow-class-priest); }
+  &.fg-warlock { color: var(--wow-class-warlock); }
+  &.fg-druid { color: var(--wow-class-druid); }
+  &.fg-rogue { color: var(--wow-class-rogue); }
+  &.fg-monk { color: var(--wow-class-monk); }
+  &.fg-demonhunter { color: var(--wow-class-demonhunter); }
+  &.fg-hunter { color: var(--wow-class-hunter); }
+  &.fg-shaman { color: var(--wow-class-shaman); }
+  &.fg-warrior { color: var(--wow-class-warrior); }
+  &.fg-deathknight { color: var(--wow-class-deathknight); }
+  &.fg-paladin { color: var(--wow-class-paladin); }
+}
+
+@mixin class-colours-important {
+  &.fg-mage { color: var(--wow-class-mage) !important; }
+  &.fg-priest { color: var(--wow-class-priest) !important; }
+  &.fg-warlock { color: var(--wow-class-warlock) !important; }
+  &.fg-druid { color: var(--wow-class-druid) !important; }
+  &.fg-rogue { color: var(--wow-class-rogue) !important; }
+  &.fg-monk { color: var(--wow-class-monk) !important; }
+  &.fg-demonhunter { color: var(--wow-class-demonhunter) !important; }
+  &.fg-hunter { color: var(--wow-class-hunter) !important; }
+  &.fg-shaman { color: var(--wow-class-shaman) !important; }
+  &.fg-warrior { color: var(--wow-class-warrior) !important; }
+  &.fg-deathknight { color: var(--wow-class-deathknight) !important; }
+  &.fg-paladin { color: var(--wow-class-paladin) !important; }
+}
+
 @import './widgets.scss';
 
 html, body {
@@ -33,6 +64,8 @@ html, body {
 
   .h1, .h2, .h3, .h4, .h5, .h6 {
     color: var(--theme-text);
+
+    @include class-colours();
   }
 
   .tabs {
@@ -122,26 +155,6 @@ html, body {
       color: var(--theme-text);
     }
   }
-
-  table {
-    background: transparent;
-
-    thead th, thead td {
-      color: var(--theme-text);
-    }
-
-    td, th {
-      border: 0;
-    }
-  }
-}
-
-.table.is-striped tbody tr:not(.is-selected):nth-child(even) {
-  background: var(--theme-bg-2);
-}
-
-.tabs a {
-  color: var(--theme-alt-1);
 }
 
 a.spell {
