--- a/styles/widgets.scss
+++ b/styles/widgets.scss
@@ -14,6 +14,10 @@
   .widget-recruitment {
     .recruitment-open { color: var(--theme-good); }
     .recruitment-closed { color: var(--theme-bad); }
+
+    .table tbody td {
+      @include class-colours();
+    }
   }
 
   .widget-progression {
