Add styling for tooltip information.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -209,4 +209,10 @@ a.spell {
     margin: 0 !important;
     padding: 0 !important;
   }
+
+  .tooltip-space { padding-top: 0.6rem !important; }
 }
+
+.tooltip-text-yellow { color: #ffd100 !important; }
+.tooltip-text-grey { color: #9d9d9d !important; }
+.tooltip-text-green { color: #1eff00 !important; }
